--- a/project/templates/layout.html
+++ b/project/templates/layout.html
@@ -6,15 +6,32 @@
     <title>Proyecto</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+    <!-- layaout1 -->
     <link href="static/vendor/animate.css/animate.min.css" rel="stylesheet">
-    <link href="static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="static/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
     <link href="static/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
     <link href="static/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
     <link href="static/vendor/remixicon/remixicon.css" rel="stylesheet">
     <link href="static/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
     <link href="static/css/style.css" rel="stylesheet">
+    <!-- layaout2 -->
+    <link href="../static/vendor/animate.css/animate.min.css" rel="stylesheet">
+    <link href="../static/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+    <link href="../static/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+    <link href="../static/vendor/remixicon/remixicon.css" rel="stylesheet">
+    <link href="../static/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+    <link href="../static/css/style.css" rel="stylesheet">
+    <!-- layaout3 -->
+    <link href="../../static/vendor/animate.css/animate.min.css" rel="stylesheet">
+    <link href="../../static/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+    <link href="../../static/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+    <link href="../../static/vendor/remixicon/remixicon.css" rel="stylesheet">
+    <link href="../../static/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+    <link href="../../static/css/style.css" rel="stylesheet">
 </head>
 <body>
     <header id="header" class="fixed-top d-flex align-items-center">
@@ -106,5 +123,58 @@
     <script src="static/vendor/swiper/swiper-bundle.min.js"></script>
     <script src="static/vendor/waypoints/noframework.waypoints.js"></script>
     <script src="static/vendor/php-email-form/validate.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/annyang/2.5.0/annyang.min.js"></script>
+    <script type="text/javascript" src="https://cdn.datatables.net/v/dt/dt-1.11.3/datatables.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+
+
+    <script>
+        $(document).ready(function(){
+            /*  $("#btnAgregar").click(function(){
+                Swal.fire({
+                    title: 'Do you want to save the changes?',
+                    showDenyButton: true,
+                    showCancelButton: true,
+                    confirmButtonText: 'Save',
+                    denyButtonText: `Don't save`,
+                  }).then((result) => {
+                    if (result.isConfirmed) {
+                        var nombre = $("#text1").val();
+                        var precio = $("#text2").val();
+                        var file = $("#file").val();
+                        data = {
+                            "nombre":nombre,
+                            "precio":precio,
+                            "file":file
+                        }
+                    
+                        $.ajax({
+                            type: 'POST',
+                            url: '/addProducto',
+                            data: {
+                                "datos": data
+                            },
+                            datatype: 'json'
+                        })
+                    } else if (result.isDenied) {
+                      Swal.fire('Changes are not saved', '', 'info')
+                    }
+                  })
+                
+            }); */
+            
+            
+            
+            
+
+
+
+
+
+
+
+            //fin docuemntready
+        })
+    </script>
 </body>
 </html>
