--- a/project/templates/productos/addProductos.html
+++ b/project/templates/productos/addProductos.html
@@ -1,4 +1,4 @@
-{% extends "layout2.html" %}
+{% extends "layout.html" %}
 
 {% block content %}
 <main id="main">
@@ -16,7 +16,7 @@
     {% with messages = get_flashed_messages() %}
     {% if messages %}
     <div class="alert alert-warning" role="alert">
-        {{ messages[0] }}. Go to <a href="{{ url_for('auth.login') }}">login page</a>.
+        {{ messages[0] }}. </a>.
     </div>
     {% endif %}
     {% endwith %}
@@ -37,10 +37,8 @@
                     <div class="col-md-6 form-group mt-3 mt-md-0">
                         <label for="file">Imagen:</label>
                         <input type="file" id="file" name="file" accept="image/png, image/jpeg">
-                    </div>
-                    <div class="text-center"><input class="btn btn-primary" type="submit" value="Agregar Producto">
-                    </div>
             </form>
+            <button class="btn btn-success" id="btnAgregar">agregarrrr</button>
         </div>
     </section><!-- End Contact Section -->
 
