--- a/project/templates/productos/addProductos.html
+++ b/project/templates/productos/addProductos.html
@@ -35,12 +35,23 @@
                         <input type="text" name="precio" class="form-control" id="text2" placeholder="Precio" required>
                     </div>
                     <div class="col-md-6 form-group mt-3 mt-md-0">
-                        <label for="file">Imagen:</label>
+                        <label for="tipo_producto">Tipo de Producto</label>
+                        <select class="selectpicker form-control" id="tipo_producto" name="tipo_producto" data-live-search="true" required>
+                            {% for tipo in tipos %}
+                                <option value="{{ tipo.tipoProductoID }}">{{ tipo.nombreProducto }}</option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                    <div class="col-md-6 form-group mt-3 mt-md-0">
+                        <label for="file">Imagen:</label><br>
                         <input type="file" id="file" name="file" accept="image/png, image/jpeg">
+                </div>
+                <button class="btn btn-success btn-lg btn-block" id="btnAgregar">Agregar</button>
             </form>
-            <button class="btn btn-success" id="btnAgregar">agregarrrr</button>
         </div>
-    </section><!-- End Contact Section -->
+    </section>
+    
+    <!-- End Contact Section -->
 
 </main><!-- End #main -->
 {% endblock %}
