--- a/project/static/css/style.css
+++ b/project/static/css/style.css
@@ -1820,3 +1820,31 @@ section {
   padding-right: 0;
   padding-left: 0;
 }
+
+.table-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.total-container {
+  margin-top: 20px;
+  padding-left: 60%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+label {
+  margin-right: 10px;
+  font-weight: bold;
+}
+
+.subtotal {
+  border: none;
+  border-bottom: 2px solid gray;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: right;
+  width: 100px;
+}
