--- a/project/templates/layout.html
+++ b/project/templates/layout.html
@@ -7,9 +7,10 @@
     <meta content="" name="description">
     <meta content="" name="keywords">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
     <!-- layaout1 -->
     <link href="static/vendor/animate.css/animate.min.css" rel="stylesheet">
@@ -43,6 +44,9 @@
                     {% endif %}
                     {% if current_user.is_authenticated and current_user.id == 1%}
                     <li><a href="{{ url_for('productos.listaProductos') }}">Lista de Productos</a></li>
+                    {% endif %}
+                    {% if current_user.is_authenticated and current_user.id == 1%}
+                    <li><a href="{{ url_for('materiaPrima.galeriaMateriaPrima') }}">Materia Prima</a></li>
                     {% endif %}
                     <li><a href="{{ url_for('main.contacto') }}">Contacto</a></li>
                     {% if not current_user.is_authenticated %}
@@ -129,9 +133,159 @@
 
 
     <script>
+            // Función para construir la tabla HTML con los detalles de los productos en el carrito
+            function construirTablaCarrito() {
+                var tabla = "<table class='table'>";
+                tabla += "<thead><tr><th>Producto</th><th>Precio</th><th>Cantidad</th><th>Acciones</th></tr></thead>";
+                tabla += "<tbody>";
             
-        $(document).ready(function(){
-        
+                for (var idProducto in carrito) {
+                    var producto = carrito[idProducto];
+                    tabla += "<tr>";
+                    tabla += "<td>" + producto.nombre + "</td>";
+                    tabla += "<td class='costo' data-precio='" + producto.precio.toFixed(2) + "'>$" + producto.precio.toFixed(2) + "</td>";
+                    tabla += "<td><input type='number' class='cantidad' min='1' max='1000' pattern='[0-9]*' value='" + producto.cantidad + "'></input></td>";
+                    tabla += "<td><button class='btn btn-danger' value='" + idProducto + "'>Eliminar</button></td>";
+                    tabla += "</tr>";
+                }
+            
+                tabla += "</tbody></table>";
+            
+                return tabla;
+            }
+            // Función para reiniciar el carrito
+            function reiniciarCarrito() {
+                carrito = {};
+                numProductos = 0;
+                $("#numProductos").text(numProductos);
+            }
+            var carrito = {};  // Inicializamos el objeto que representa nuestro carrito de compras
+            var numProductos = 0;  // Inicializamos el número de productos en el carrito a cero
+       
+
+            // Función para actualizar la tabla del carrito
+            function actualizarTablaCarrito() {
+                var tabla = construirTablaCarrito();
+                $("#tablaCarrito").html(tabla);
+            }    
+
+            // Función para eliminar un producto del carrito
+            function eliminarProductoCarrito(idProducto) {
+                delete carrito[idProducto];
+                var tabla = construirTablaCarrito();
+                $("#carritoBody").html(tabla);
+                actualizarSubtotal();
+              }
+
+            function calcularSubtotal() {
+                var subtotal = 0;
+                $("#carritoBody tr").each(function() {
+                  var cantidad = parseInt($(this).find(".cantidad").val());
+                  var costo = parseFloat($(this).find(".costo").data("precio"));
+                  if (!isNaN(cantidad) && !isNaN(costo)) {
+                    var productoSubtotal = cantidad * costo;
+                    subtotal += productoSubtotal;
+                  }
+                });
+                return subtotal;
+              }
+              
+              // Función para actualizar el valor del input subtotal en tiempo real
+              function actualizarSubtotal() {
+                var subtotal = calcularSubtotal();
+                $("#subtotal").val(subtotal.toFixed(2));
+              }
+            // Función para agregar eventos al modal
+                function agregarEventosModalCarrito() {
+                    // Actualizar el subtotal cada vez que se muestre el modal
+                    $('#modalCarrito').on('show.bs.modal', function() {
+                    var tabla = construirTablaCarrito();
+                    $("#carritoBody").html(tabla);
+                    actualizarSubtotal();
+                    });
+                    // Actualizar el subtotal cada vez que se oculte el modal
+                    $('#modalCarrito').on('hidden.bs.modal', function() {
+                    actualizarSubtotal();
+                    });
+                    // Actualizar el subtotal cada vez que se cambie la cantidad de un producto
+                    $(document).on("change", "#tablaCarrito input[type='number']", function() {
+                    actualizarSubtotal();
+                    });
+                }
+            
+              
+//-------------------------------------------------------------------------------------------------------------------------------------
+//------------------------------------------------------------inicio document ready----------------------------------------------------
+//-------------------------------------------------------------------------------------------------------------------------------------       
+$(document).ready(function(){
+            //---------------------------------------------jquery carrito----------------------------------------------------
+            agregarEventosModalCarrito();
+            $('#ventanaCarrito').on('click',function(){
+                actualizarSubtotal();
+                $('#modalCarrito').modal();
+            });
+
+            $(document).on("change", "#tablaCarrito input[type='number']", function() {
+                var idProducto = $(this).closest("tr").data("id");
+                var nuevaCantidad = parseInt($(this).val());
+              
+                if (carrito[idProducto]) {
+                  carrito[idProducto].cantidad = nuevaCantidad;
+                  actualizarTablaCarrito();
+                }
+              });
+            // Función que se llama cuando se hace clic en el botón "Agregar al carrito"
+            $(".agregar-carrito").click(function() {
+                var idProducto = $(this).val();  // Obtenemos el ID del producto que se está agregando
+                var nombre = $(this).closest(".product-card").find(".card-title").text();  // Obtenemos el nombre del producto
+                var precio = $(this).closest(".product-card").find(".card-text").text();  // Obtenemos el precio del producto
+                precio = parseFloat(precio.replace("$", ""));  // Convertimos el precio a un número
+
+
+                // Si el producto ya está en el carrito, incrementamos la cantidad en 1. Si no, lo agregamos al carrito.
+                
+                    carrito[idProducto] = {
+                        nombre: nombre,
+                        precio: precio,
+                        cantidad: 1
+                    };
+                
+                
+                numProductos++;  // Incrementamos el número de productos en el carrito
+                
+                // Actualizamos el número que se muestra en el botón "Carrito"
+                $("#numProductos").text(numProductos);
+            });
+
+            // Actualizamos el contenido del modal cada vez que se muestra
+                $('#modalCarrito').on('show.bs.modal', function() {
+                    var tabla = construirTablaCarrito();
+                    var tabla2 = actualizarSubtotal();
+                    $("#carritoBody").html(tabla,tabla2);
+                });
+            // Asignar evento de clic para los botones de eliminar
+                $(document).on("click", ".btn-danger", function(event) {
+                    var idProducto = $(this).val();
+                    eliminarProductoCarrito(idProducto);
+                });
+
+            // Función que se llama cuando se hace clic en el botón "Comprar"
+            $("#modalCarrito .btn-success").click(function() {
+                reiniciarCarrito();
+                $("#tablaCarrito").html("<p>Tu carrito está vacío.</p>");
+            });
+
+            // Función que se llama cuando se hace clic en el botón "Comprar"
+            $("#modalCarrito .btn-success").click(function() {
+                reiniciarCarrito();
+                $("#tablaCarrito").html("<p>Tu carrito está vacío.</p>");
+
+            });
+            //subtotal
+            $(document).on("change", ".table", function() {
+                actualizarSubtotal();
+              });
+
 
             //fin docuemntready
         })
