--- a/project/templates/productos/addProductos.html
+++ b/project/templates/productos/addProductos.html
@@ -26,7 +26,7 @@
         <div class="container">
             <form action="{{ url_for('productos.addProducto_post') }}" method="post" enctype='multipart/form-data'>
                 <div class="row">
-                    <div class="col-md-6 form-group">
+                    <div class="col-md-6 form-group mt-3 mt-md-0">
                         <label for="nombre">Nombre</label>
                         <input type="text" name="nombre" class="form-control" id="text1" placeholder="Nombre" required>
                     </div>
