--- a/project/templates/productos/galeria.html
+++ b/project/templates/productos/galeria.html
@@ -5,14 +5,12 @@
 
     <!-- ======= Breadcrumbs ======= -->
     <section id="breadcrumbs" class="breadcrumbs">
-        <div class="container">
-
-            <div class="d-flex justify-content-between align-items-center">
-                <h2>Productos</h2>
-            </div>
-
+        <div class="container d-flex justify-content-between align-items-center">
+            <h2>Productos</h2>
+            <a type="button" class="btn btn-success" id="ventanaCarrito" style="margin-left: auto;"><i class="fa fa-shopping-cart"></i> Carrito</a>
         </div>
-    </section><!-- End Breadcrumbs -->
+    </section> 
+    <!-- End Breadcrumbs -->
     {% with messages = get_flashed_messages() %}
     {% if messages %}
     <div class="alert alert-warning" role="alert">
@@ -22,6 +20,45 @@
     {% endwith %}
 
     <!-- ======= Contact Section ======= -->
+    
+    <section>
+        <div class="modal fade" id="modalCarrito" tabindex="-1" role="dialog">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Carrito de Compras</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Cerrar">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <table class="table table-striped">
+                            <thead>
+                                
+                            </thead>
+                            <tbody id="carritoBody">
+                            </tbody>
+                        </table>
+                        <div class="total-container">
+                            <label for="total">Subtotal:</label>
+                            $<input type="text" class="subtotal"id="subtotal" readonly>
+                        </div>
+                        <div class="alert alert-success" id="carritoAlert" style="display:none">
+                            <h6><strong>Tu pedido se ha realizado correctamente</strong></h6>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button class="btn btn-warning" type="button" data-dismiss="modal">
+                            Cerrar
+                        </button>
+                        <button class="btn btn-success" type="button" id="comprarBtn">
+                            Comprar
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <section id="contact" class="contact">
         <div class="container">
             <div class="row row-cols-1 row-cols-md-3 row-cols-lg-4 row-no-gutters">
@@ -31,17 +68,15 @@
                         <img src="../static/img/productos/{{producto.image_name}}" class="card-img-top" alt="..." style="max-height: 200px; object-fit: contain; margin: auto;">
                         <div class="card-body">
                             <h5 class="card-title">{{producto.nombre}}</h5>
-                            <p class="card-text">{{producto.precio}}</p>
+                            <p class="card-text">${{producto.precio}}</p>
                         </div>
-                        <a href="#" class="btn btn-primary stretched-link">Agregar al carrito</a>
+                        <button class="btn btn-primary agregar-carrito" value="{{producto.idProducto}}">Agregar al carrito</button>
                     </div>
                 </div>
                 {% endfor %}
             </div>
         </div>
     </section>
-    
-      
 
 </main><!-- End #main -->
 {% endblock %}
