estoy muriendo lentamente, 3hrs resolviendo un error de login, neta matenme ya, si alguien lee esto ya no quiero ser ingeniero

--- a/project/templates/Materia_Prima/materia_prima.html
+++ b/project/templates/Materia_Prima/materia_prima.html
@@ -24,7 +24,7 @@
     <!-- ======= Contact Section ======= -->
     <section >
         <div class="container">
-            <table class="table mt-5">
+            <table class="table mt-5" id="myTable">
                 <thead>
                     <tr>
                         <th scope="col">idProducto</th>
