--- a/project/templates/layout.html
+++ b/project/templates/layout.html
@@ -10,6 +10,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.4/css/jquery.dataTables.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
     <!-- layaout1 -->
@@ -39,7 +40,7 @@
         <div class="container d-flex align-items-center">
             <nav id="navbar" class="navbar">
                 <ul>
-                    {% if current_user.is_authenticated%}
+                    {% if current_user.is_authenticated and current_user.id == 1%}
                     <li><a href="{{ url_for('productos.galeria') }}">Productos</a></li>
                     {% endif %}
                     {% if current_user.is_authenticated and current_user.id == 1%}
@@ -125,6 +126,7 @@
     <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
             class="bi bi-arrow-up-short"></i></a>
     <script src="static/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.min.js"></script>
     <script src="static/vendor/glightbox/js/glightbox.min.js"></script>
     <script src="static/vendor/isotope-layout/isotope.pkgd.min.js"></script>
     <script src="static/vendor/swiper/swiper-bundle.min.js"></script>
@@ -147,7 +149,7 @@
                     tabla += "<tr class='producto-row'>";
                     tabla += "<td>" + producto.nombre + "</td>";
                     tabla += "<td class='costo' data-precio='" + producto.precio.toFixed(2) + "'>$" + producto.precio.toFixed(2) + "</td>";
-                    tabla += "<td><input type='number' class='cantidad' min='1' max='1000' pattern='[0-9]*' value='" + producto.cantidad + "'></input></td>";
+                    tabla += "<td><input type='number' class='cantidad' min='1' max='1000' oninput='this.value=this.value.replace(/[^0-9]/g,\"\")' value='" + producto.cantidad + "'></input></td>";
                     tabla += "<td><button class='btn btn-danger' value='" + idProducto + "'>Eliminar</button></td>";
                     tabla += "</tr>";
                 }
@@ -221,6 +223,14 @@
 //------------------------------------------------------------inicio document ready----------------------------------------------------
 //-------------------------------------------------------------------------------------------------------------------------------------       
 $(document).ready(function(){
+            let table = new DataTable('#myTable', {
+                searching: true,
+                paging: true,
+                ordering: true,
+                language: {
+                url: '//cdn.datatables.net/plug-ins/1.10.25/i18n/Spanish.json'
+                }
+            });
             //---------------------------------------------jquery carrito----------------------------------------------------
             agregarEventosModalCarrito();
             $('#ventanaCarrito').on('click',function(){
