--- a/project/templates/security/login.html
+++ b/project/templates/security/login.html
@@ -29,7 +29,7 @@
                     <form action="{{ url_for('auth.login') }}" method="post" role="form">
                         <div class="row">
                             <div class="col-md-6 form-group">
-                                Correo
+                                Correo222
                                 <input type="email" name="email" class="form-control" id="email" placeholder="Correo"
                                     required>
                             </div>
