--- a/project/static/css/style.css
+++ b/project/static/css/style.css
@@ -1848,3 +1848,39 @@ label {
   text-align: right;
   width: 100px;
 }
+
+/* Estilos para la sección */
+section {
+  background-color: #f9f9f9;
+  padding: 20px;
+}
+
+/* Estilos para la tabla */
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+}
+
+th, td {
+  padding: 8px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+}
+
+th {
+  background-color: #333;
+  color: white;
+}
+
+/* Estilos para el encabezado H1 */
+h1 {
+  text-align: center;
+  margin-top: 50px;
+  font-size: 2.5rem;
+  color: #333;
+  font-weight: bold;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+
