--- a/project/templates/productos/listaProductos.html
+++ b/project/templates/productos/listaProductos.html
@@ -26,7 +26,7 @@
                 <button type="button" class="btn btn-success">Agregar Productos</button>
             </a>
             <h1>Productos Activos</h1>
-            <table class="table mt-5">
+            <table class="table mt-5" id="myTable">
                 <thead>
                     <tr>
                         <th scope="col">idProducto</th>
@@ -56,7 +56,7 @@
                 </tbody>
             </table>
             <h1>Productos Inactivos</h1>
-            <table class="table mt-5">
+            <table class="table mt-5" id="myTable">
                 <thead>
                     <tr>
                         <th scope="col">idProducto</th>
