soy una vrga programando

--- a/project/templates/Pedidos/verPedidos.html
+++ b/project/templates/Pedidos/verPedidos.html
@@ -22,11 +22,14 @@
     {% endwith %}
 
     <!-- ======= Contact Section ======= -->
+
+  <!-- Incio Tabla -->
     <section>
         <div class="container">
           <table id="myTable" class="display">
             <thead>
               <tr>
+                <th>Nombre Usuario</th>
                 <th>Estatus</th>
                 <th>Fecha de Compra</th>
                 <th>Subtotal</th>
@@ -36,19 +39,25 @@
             <tbody>
               {% for detalle in detalles %}
               <tr>
-                
+                <td>{{ detalle.userName }}</td>
                 <td>{{ detalle.descripcionEstatus }}</td>
                 <td>{{ detalle.fechaCompra }}</td>
                 <td>${{ detalle.subtotal }}</td>
                 <td>
-                    {% if (current_user.idrole == 1 or current_user.idrole == 2) %}
-                      <button class="btn btn-warning">Cambiar Estatus</button>
-                    {% endif %}
-                    {% if detalle.descripcionEstatus != 'PEDIDO CANCELADO' and (current_user.idrole == 1 or current_user.idrole == 2 or current_user.idrole == 4) %}
-                      <button class="btn btn-danger btnCancelarPedido" value="{{ detalle.idCompra }}" >Cancelar</button>
-                    {% endif %}
                     {% if (current_user.idrole == 1 or current_user.idrole == 2 or current_user.idrole == 4) %}
                     <button class="btn btn-warning"><a class="btnVerDetalle" href="{{ url_for('pedidos.ver_detalle', idPedido=detalle.idCompra) }}">Ver Detalle</a></button>
+                    {% endif %}
+                    {% if detalle.descripcionEstatus == 'PEDIDO ENVIADO' and (current_user.idrole == 1 or current_user.idrole == 3) %}
+                    <button class="btn btn-success btnEntregar" value="{{ detalle.idCompra }}" >Entregar Pedido</button>
+                    {% endif %}
+                    {% if detalle.descripcionEstatus == 'PEDIDO ACEPTADO' and (current_user.idrole == 1 or current_user.idrole == 2) %}
+                      <button class="btn btn-success btnEnviar" value="{{ detalle.idCompra }}" >Enviar Pedido</button>
+                    {% endif %}
+                    {% if detalle.descripcionEstatus == 'PEDIDO CREADO' and (current_user.idrole == 1 or current_user.idrole == 2) %}
+                      <button class="btn btn-success btnAceptar" value="{{ detalle.idCompra }}" >Aceptar Pedido</button>
+                    {% endif %}
+                    {% if detalle.descripcionEstatus != 'PEDIDO CANCELADO' and (current_user.idrole == 1 or current_user.idrole == 2 or current_user.idrole == 4) %}
+                    <button class="btn btn-danger btnCancelarPedido" value="{{ detalle.idCompra }}" >Cancelar</button>
                     {% endif %}
                 </td>
                 
